<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_tests">

    <fragment
        android:id="@+id/nav_my_tests"
        android:name="com.oostaoo.org.oostaoocodingadventure.ui.myTests.MyTestsFragment"
        android:label="@string/menu_my_tests"
        tools:layout="@layout/fragment_my_tests" >
        <action
            android:id="@+id/action_nav_my_tests_to_nav_test_candidats"
            app:destination="@id/nav_test_candidats" />
    </fragment>

    <fragment
        android:id="@+id/nav_new_test"
        android:name="com.oostaoo.org.oostaoocodingadventure.ui.newTest.NewTestFragment"
        android:label="@string/menu_new_test"
        tools:layout="@layout/fragment_new_test" >
        <action
            android:id="@+id/action_nav_new_test_to_nav_list_questions"
            app:destination="@id/nav_list_questions" />
    </fragment>

    <fragment
        android:id="@+id/nav_user_profile"
        android:name="com.oostaoo.org.oostaoocodingadventure.ui.userProfile.UserProfileFragment"
        android:label="@string/menu_user_profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/nav_business_profile"
        android:name="com.oostaoo.org.oostaoocodingadventure.ui.businessProfile.BusinessProfileFragment"
        android:label="@string/menu_business_profile"
        tools:layout="@layout/fragment_business_profile" />

    <fragment
        android:id="@+id/nav_facturation"
        android:name="com.oostaoo.org.oostaoocodingadventure.ui.facturation.FacturationFragment"
        android:label="@string/menu_facturation"
        tools:layout="@layout/fragment_facturation" />

    <fragment
        android:id="@+id/nav_data_protection"
        android:name="com.oostaoo.org.oostaoocodingadventure.ui.dataProtection.DataProtectionFragment"
        android:label="@string/menu_data_protection"
        tools:layout="@layout/fragment_data_protection" />

    <fragment
        android:id="@+id/nav_users"
        android:name="com.oostaoo.org.oostaoocodingadventure.ui.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_test_candidats"
        android:name="com.oostaoo.org.oostaoocodingadventure.ui.testCandidats.TestCandidatsFragment"
        android:label="@string/menu_test_candidats"
        tools:layout="@layout/fragment_test_candidats" >
        <action
            android:id="@+id/action_nav_test_candidats_to_nav_info_candidat"
            app:destination="@id/nav_info_candidat" />
        <action
            android:id="@+id/action_nav_test_candidats_to_nav_add_candidat"
            app:destination="@id/nav_add_candidat" />
    </fragment>

    <fragment
        android:id="@+id/nav_test_questions"
        android:name="com.oostaoo.org.oostaoocodingadventure.ui.testQuestions.TestQuestionsFragment"
        android:label="@string/menu_list_questions"
        tools:layout="@layout/fragment_test_questions" />

    <fragment
        android:id="@+id/nav_parameters_campaign"
        android:name="com.oostaoo.org.oostaoocodingadventure.ui.parametersCampaign.ParametersCampaignFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_parameters_campaign" />

    <fragment
        android:id="@+id/nav_list_questions"
        android:name="com.oostaoo.org.oostaoocodingadventure.ui.listQuestions.ListQuestionsFragment"
        android:label="@string/menu_list_questions"
        tools:layout="@layout/fragment_list_questions" />

    <fragment
        android:id="@+id/nav_info_candidat"
        android:name="com.oostaoo.org.oostaoocodingadventure.ui.testInfoCandidat.TestInfoCandidatFragment"
        android:label="@string/menu_list_questions"
        tools:layout="@layout/fragment_info_candidat" />

    <fragment
        android:id="@+id/nav_add_candidat"
        android:name="com.oostaoo.org.oostaoocodingadventure.ui.addCandidat.AddCandidatFragment"
        android:label="@string/menu_add_candidat"
        tools:layout="@layout/fragment_add_candidat" >
        <action
            android:id="@+id/action_nav_add_candidat_to_nav_config_email"
            app:destination="@id/nav_config_email" />
    </fragment>

    <fragment
        android:id="@+id/nav_config_email"
        android:name="com.oostaoo.org.oostaoocodingadventure.ui.configEmail.ConfigEmailFragment"
        android:label="@string/menu_config_email"
        tools:layout="@layout/fragment_config_email" />

</navigation>