<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/edit_login"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/title"/>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/edit_login"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_connect"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_below="@id/edit_password"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/registration"/>

</RelativeLayout>