<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey">

    <TextView
        android:id="@+id/title"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:alpha="0.5"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/title_grey"
        android:textSize="24sp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/linear_register"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/new_customer"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_registration"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_rectangle"
            android:fontFamily="sans-serif-black"
            android:text="@string/registration"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <TextView
        android:id="@+id/already_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_register"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/already_client"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_login"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@id/already_client"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/edit_login"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_connect"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@id/edit_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-black"
        android:text="@string/connection"
        android:textColor="@color/white" />

</RelativeLayout>