<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_select_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_role"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_profiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_select_role"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/spinner_background"/>

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            app:layout_constraintTop_toBottomOf="@id/spinner_profiles"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_select_technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_technology"
            app:layout_constraintTop_toBottomOf="@id/tv_or"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <com.oostaoo.org.oostaoocodingadventure.ui.newTest.MultiSelectionSpinner
            android:id="@+id/spinner_technologies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_select_technology"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/spinner_background" />

        <FrameLayout
            android:id="@+id/fl_separation"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/spinner_technologies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_select_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_experience"
            app:layout_constraintTop_toBottomOf="@id/fl_separation"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/rg_experience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_select_experience"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_junior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/orange_next_step"
                android:text="@string/junior"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/rb_senior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/rb_junior"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:text="@string/senior"
                android:textSize="14sp"
                android:buttonTint="@color/orange_next_step"/>

            <RadioButton
                android:id="@+id/rb_expert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintStart_toEndOf="@id/rb_senior"
                android:layout_marginStart="10dp"
                android:text="@string/expert"
                android:textSize="14sp"
                android:buttonTint="@color/orange_next_step"/>

        </RadioGroup>

        <TextView
            android:id="@+id/tv_campaign_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rg_experience"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/campaign_name" />

        <EditText
            android:id="@+id/et_campaign_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_campaign_name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="100dp"
            android:inputType="text"
            android:hint="@string/enter_name_campaign"
            android:backgroundTint="@color/orange_next_step"/>

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:text="@string/language"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_campaign_name" />

        <RadioGroup
            android:id="@+id/rg_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_language"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/orange_next_step"
                android:text="@string/fr"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/rb_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/rb_fr"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:text="@string/en"
                android:textSize="14sp"
                android:buttonTint="@color/orange_next_step"/>

            <RadioButton
                android:id="@+id/rb_es"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/rb_en"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:text="@string/es"
                android:textSize="14sp"
                android:buttonTint="@color/orange_next_step"/>

            <RadioButton
                android:id="@+id/rb_jp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/rb_es"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:text="@string/jp"
                android:textSize="14sp"
                android:buttonTint="@color/orange_next_step"/>

        </RadioGroup>

        <TextView
            android:id="@+id/tv_copy_paste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copy_paste"
            app:layout_constraintTop_toBottomOf="@id/rg_language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/rg_copy_paste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_copy_paste"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_yes_copy_paste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/orange_next_step"
                android:text="@string/yes"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/rb_no_copy_paste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/rb_yes_copy_paste"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:text="@string/no"
                android:textSize="14sp"
                android:buttonTint="@color/orange_next_step"/>

        </RadioGroup>

        <TextView
            android:id="@+id/tv_send_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_report"
            app:layout_constraintTop_toBottomOf="@id/rg_copy_paste"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/rg_send_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_send_report"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_yes_send_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/orange_next_step"
                android:text="@string/yes"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/rb_no_send_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/rb_yes_send_report"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="10dp"
                android:text="@string/no"
                android:textSize="14sp"
                android:buttonTint="@color/orange_next_step"/>

        </RadioGroup>

        <Button
            android:id="@+id/bt_next_step_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_next_step"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/questions_next_step"
            android:textAllCaps="false"
            android:textColor="@color/orange_next_step"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_send_report" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>